--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "tasky back-end",
+  "name": "tasky-back-end",
   "version": "0.0.95",
   "description": "It is a simple crud for tasks",
   "main": "index.js",
   "scripts": {
-    "test": "npm test"
+    "test": "npm test",
+    "dev" : "nodemon server.js",
+    "start" : "node server.js"
   },
   "author": "waldeci freitas",
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
+    "nodemon": "^3.1.4",
     "postgres": "^3.4.4"
   }
 }
