--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "npm test",
-    "dev" : "nodemon server.js",
-    "start" : "node server.js"
+    "dev": "nodemon server.js",
+    "start": "node server.js"
   },
   "author": "waldeci freitas",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "nodemon": "^3.1.4",
     "postgres": "^3.4.4"
