--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "It is a simple crud for tasks",
   "main": "index.js",
   "scripts": {
-    "test": "npm test",
+    "test": "jest",
     "dev": "nodemon server.js",
     "start": "node server.js"
   },
@@ -16,5 +16,8 @@
     "express": "^4.19.2",
     "nodemon": "^3.1.4",
     "postgres": "^3.4.4"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
