--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "postgres": "^3.4.4"
   },
   "devDependencies": {
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0"
   }
 }
