--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "dev": "nodemon server.js",
+    "dev": "NODE_ENV=dev nodemon server.js",
     "start": "node server.js"
   },
   "author": "waldeci freitas",
