--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "It is a simple crud for tasks",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "NODE_ENV=dev jest",
     "dev": "NODE_ENV=dev nodemon server.js",
     "start": "node server.js"
   },
