--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "google-auth-library": "^9.14.2",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.4",
     "postgres": "^3.4.4"
